--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "license": "MIT",
   "dependencies": {
     "chai": "^4.2.0",
-    "mocha": "^8.2.0"
+    "cmake-js": "^6.1.0",
+    "mocha": "^8.2.0",
+    "node-addon-api": "^3.0.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.5",
