--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "fips202 Sha3 Shake256 hash from buffer or stream.",
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha --timeout 10000",
     "build": "tsc",
     "tsc-w": "tsc -w",
     "build-docs": "touch ./readme.md && rm ./readme.md && npx typedoc --toc --excludeNotExported --includeDeclarations --excludeExternals --mode modules --theme markdown --out /mnt/d/dev/node-sha3-shake256/docs --readme /mnt/d/dev/node-sha3-shake256/readmeHeader/readhead.md /mnt/d/dev/node-sha3-shake256/src && npx concat-md --toc --decrease-title-levels --dir-name-as-title ./docs > README.md",
